--- a/checkout.html
+++ b/checkout.html
@@ -153,7 +153,7 @@
                 </ul>
               </li>
 
-              <li class="dropdown"><a class="dropdown-toggle" href="documentation.html" data-toggle="dropdown">ACCESSORIES</a>
+              <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">ACCESSORIES</a>
                 <ul class="dropdown-menu">
                   <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">Gaming Accessories</a>
                     <ul class="dropdown-menu">
