--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
             <div class="row mt-30">
               <div class="col-sm-12 align-center"><a class="btn btn-b btn-round" href="dragonwareaccessout.html">See all products</a></div>
             </div>
+		  <div class="row mt-30">
+              <div class="col-sm-12 align-center"><a class="btn btn-b btn-round" href="checkout.html">Checkout</a></div>
+            </div>
           </div>
         </section>
         <section class="module module-video bg-dark-30" data-background="">
