--- a/Dragonware.html
+++ b/Dragonware.html
@@ -228,7 +228,7 @@
               <div class="col-sm-12 align-center"><a class="btn btn-b btn-round" href="dragonwareaccessout.html">See all products</a></div>
             </div>
 		  <div class="row mt-30">
-              <div class="col-sm-12 align-center"><a class="btn btn-b btn-round" href="Dragonware.html">Home</a></div>
+              <div class="col-sm-12 align-center"><a class="btn btn-b btn-round" href="checkout.html">Checkout</a></div>
             </div>
           </div>
         </section>
